Place the "Add Item" link, and the "Save" and "Cancel" buttons, in a fixed footer that is always visible at the bottom of the page.
git-svn-id: https://svn.code.sf.net/p/processdash/code/trunk@2806 560cad82-bde2-470f-af40-e4e1f8d6548a

--- a/processdash/Templates/dash/cmsEdit.css
+++ b/processdash/Templates/dash/cmsEdit.css
@@ -34,6 +34,28 @@
     font-size: 1pt;
 }
 
+.cmsMoveUpButton {
+    float: right;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 2px;
+    width: 14px;
+    height: 14px;
+    background-image: url("/Images/up.gif");
+    font-size: 1pt;
+}
+
+.cmsMoveDownButton {
+    float: right;
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 2px;
+    width: 14px;
+    height: 14px;
+    background-image: url("/Images/down.gif");
+    font-size: 1pt;
+}
+
 .cmsEditButton14 {
     float: right;
     margin-right: 3px;
@@ -76,11 +98,13 @@
     border-bottom: 1px solid silver;
 }
 
-.cmsButtonRow {
-    margin-top: 30px;
+div#fixedFooter.cmsButtonRow {
+    background-color: #ffffc0;
+    border-top: 2px solid black;
+    padding: 10px;
 }
 .cmsButtonRow button {
-    margin-right: 15px;
+    margin-left: 15px;
 }
 
 .cmsNoEditMessage {
